--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -33,8 +33,8 @@
               <fa-icon class="mat-hint" [icon]="item.icon"></fa-icon>
               <span class="mat-hint pl-h ml-q">{{ item?.name | translate}}</span>
               <span fxFlex></span>
-              <button mat-icon-button *ngIf="item.children && item.children.length"
-                [@indicatorRotate]="item.expanded ? 'expanded': 'collapsed'" (click)="createElement($event, item)">
+              <button mat-icon-button [@indicatorRotate]="item.expanded ? 'expanded': 'collapsed'"
+                (click)="createElement($event, item)">
                 <fa-icon class="mat-hint" icon="plus"></fa-icon>
               </button>
             </a>
