Add hint messagge in Creation Classroom & Subject

--- a/src/app/classroom/components/classroom-creation/classroom-creation.component.html
+++ b/src/app/classroom/components/classroom-creation/classroom-creation.component.html
@@ -11,6 +11,8 @@
 
 <mat-dialog-content class="mat-typography">
 
+	<p class="mb-1 pb-h mat-hint">{{'CLASSROOM.CREATION_SUBTITLE' | translate}}.</p>
+
 	<form [formGroup]="classroomFormGroup" autocomplete="off">
 
 		<div class="f-wrap mb-1" fxLayout="column">
