--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -11,6 +11,8 @@
 
 <mat-dialog-content class="mat-typography">
 
+	<p class="mb-1 pb-h mat-hint">{{'SUBJECT.CREATION_SUBTITLE' | translate}}.</p>
+
 	<form [formGroup]="subjectFormGroup" autocomplete="off">
 
 		<div class="f-wrap" fxLayout="column">
