--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -162,7 +162,7 @@
     </div>
 
     <!-- CLASSROOM -->
-    <h3 class="mat-h2 mat-hint">{{'CLASSROOM' | translate}}</h3>
+    <h3 class="mat-h2 mat-hint">{{'CLASSROOM.NAME' | translate}}</h3>
     <div formGroupName="classroomFormGroup" class="mb-H mt-1 f-wrap" fxLayout="row" fxLayout.xs="column"
       fxLayoutAlign="space-between center">
 
