Day creation subtitle

--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -10,6 +10,8 @@
 
 <mat-dialog-content class="mat-typography">
 
+	<p class="mb-1 pb-h pl-q pr-q mat-hint">{{'DAY.CREATION_SUBTITLE' | translate}}.</p>
+
   <form [formGroup]="dayFormGroup" autocomplete="off">
 
     <div class="mb-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center">
