--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -44,6 +44,7 @@
   color: var(--other-success-color) !important;
 }
 
+.welcome fa-icon,
 .info fa-icon,
 .info-color {
   color: var(--other-info-color) !important;
