--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -9,5 +9,5 @@
   <h3 *ngIf="!dayList.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
 
   <!-- Floating button -->
-  <a13-floating-button text="DAY.ADD" icon="add" (click)="createDay()"></a13-floating-button>
+  <a13-floating-button text="DAY.ADD" icon="edit" (click)="createDay()"></a13-floating-button>
 </section>
