--- a/src/app/classroom/students/components/student-list/student-list.component.html
+++ b/src/app/classroom/students/components/student-list/student-list.component.html
@@ -64,5 +64,5 @@
   <h3 *ngIf="!studentListFiltered.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
 
   <!-- Floating button -->
-  <a13-floating-button text="ADD_STUDENT" icon="add" (click)="createStudent()"></a13-floating-button>
+  <a13-floating-button text="ADD_STUDENT" icon="user-plus" (click)="createStudent()"></a13-floating-button>
 </section>
