--- a/src/app/shared/components/floating-button/floating-button.component.html
+++ b/src/app/shared/components/floating-button/floating-button.component.html
@@ -1,5 +1,5 @@
-<button class="floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}" [disabled]="disabled"
-	[@animateFloatingButton]="buttonState" (click)="toAction()">
-	<fa-icon class="mat-icon-22" *ngIf="icon" icon="plus"></fa-icon>
+<button class="floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}"
+	[disabled]="disabled" [@animateFloatingButton]="buttonState" (click)="toAction()">
+	<fa-icon class="mat-icon-22" *ngIf="icon" [icon]="icon"></fa-icon>
 	<span *ngIf="text" class="text-button">{{text | translate}}</span>
 </button>
