--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -6,8 +6,7 @@
 
         <!-- Avatar -->
         <a flex="grow" matRipple class="avatar border-theme">
-          <img class="avatar-image" [src]="srcImage({img: student?.personal?.avatar})"
-            alt="{{student?.personal?.avatar}}">
+          <img class="avatar-image" [src]="student?.personal?.avatar | srcImage" alt="{{student?.personal?.avatar}}">
         </a>
 
         <!-- Fav button -->
@@ -114,7 +113,8 @@
         <ng-container *ngFor="let day of dayList">
           <a13-day-card [(day)]="day"></a13-day-card>
         </ng-container>
-        <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="student?.archived" (click)="createDay()"></a13-floating-button>
+        <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="student?.archived" (click)="createDay()">
+        </a13-floating-button>
       </div>
     </mat-tab>
 
