--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -7,7 +7,7 @@
     <!-- User -->
     <div class="mt-1 mb-2" fxLayout="column" fxLayoutAlign="center center">
       <a matRipple class="avatar avatar-button border-theme border-theme-button">
-        <img class="avatar-image" [src]="srcImage({img: user?.avatar })" alt="Avatar">
+        <img class="avatar-image" [src]="user?.avatar | srcImage" alt="Avatar">
       </a>
       <div class="mt-1" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
         <span class="user-name">{{ user?.name || user?.email }}</span>
