--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -4,7 +4,7 @@
 
       <!-- Avatar -->
       <a *ngIf="day?.student" [routerLink]="[ '/aula/alumno', day?.student?.id ]">
-        <img class="avatar avatar-xs p-0 mr-1" [src]="srcImage({img: day?.student?.personal?.avatar})" alt="Avatar">
+        <img class="avatar avatar-xs p-0 mr-1" [src]="day?.student?.personal?.avatar | srcImage" alt="Avatar">
       </a>
 
       <!-- Header info -->
