--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -45,7 +45,10 @@ $sizes: (
     header-size         : 54px,
     border-size         : 1px,
     scroll-size         : 7px,
-    sidemenu-size       : 280px
+    sidemenu-size       : 280px,
+    lg-size             : 1280px,
+    sm-size             : 960px,
+    xs-size             : 600px,
   )
 );
 
