--- a/src/app/classroom/settings/components/configuration/configuration.component.html
+++ b/src/app/classroom/settings/components/configuration/configuration.component.html
@@ -1,49 +1,51 @@
 <section class="container container-padd">
+  <div class="container-max sm">
 
-  <!-- Lenguaje -->
-  <h3 class="mat-h2 mt-h mat-hint">{{'GENERAL' | translate}}</h3>
+    <!-- Lenguaje -->
+    <h3 class="mat-h2 mt-h mat-hint">{{'GENERAL' | translate}}</h3>
 
-  <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
-    <img class="flag-selected" [src]="getFlag(langControl.value)"
-      alt="{{'FLAG_OF' | translate}} {{langControl.value.name | translate}}">
-    <mat-form-field appearance="outline">
-      <mat-label>{{'LANGUAGE' | translate}}</mat-label>
-      <mat-select [formControl]="langControl" (selectionChange)="setLang()">
-        <mat-option *ngFor="let lang of languages" [value]="lang">
-          <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-            <img class="flag" [src]="getFlag(lang)" alt="{{'FLAG_OF' | translate}} {{lang.name | translate}}">
-            <span>{{lang.name | translate}}</span>
-          </span>
-        </mat-option>
-      </mat-select>
-      <mat-hint>{{langControl.value?.tip}}</mat-hint>
-    </mat-form-field>
-  </div>
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
+      <img class="flag-selected" [src]="getFlag(langControl.value)"
+        alt="{{'FLAG_OF' | translate}} {{langControl.value.name | translate}}">
+      <mat-form-field appearance="outline">
+        <mat-label>{{'LANGUAGE' | translate}}</mat-label>
+        <mat-select [formControl]="langControl" (selectionChange)="setLang()">
+          <mat-option *ngFor="let lang of languages" [value]="lang">
+            <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+              <img class="flag" [src]="getFlag(lang)" alt="{{'FLAG_OF' | translate}} {{lang.name | translate}}">
+              <span>{{lang.name | translate}}</span>
+            </span>
+          </mat-option>
+        </mat-select>
+        <mat-hint>{{langControl.value?.tip}}</mat-hint>
+      </mat-form-field>
+    </div>
 
-  <mat-divider class="mt-3 mb-1"></mat-divider>
+    <mat-divider class="mt-3 mb-1"></mat-divider>
 
-  <!-- Theme -->
-  <h3 class="mat-h2 mat-hint">{{'THEME' | translate}}</h3>
+    <!-- Theme -->
+    <h3 class="mat-h2 mat-hint">{{'THEME' | translate}}</h3>
 
-  <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
-    <fa-icon class="mat-icon-22 color-primary" [icon]="themeControl.icon"></fa-icon>
-    <mat-slide-toggle labelPosition="before" (change)="toggleTheme()" [(ngModel)]="themeIsDark">
-      {{'THEMING.DARK_MODE' | translate}}
-    </mat-slide-toggle>
-  </div>
-
-  <mat-divider class="mt-2 mb-1"></mat-divider>
-
-  <!-- Behavior -->
-  <h3 class="mat-h2 mat-hint">{{'BEHAVIOR.TITLE' | translate}}</h3>
-
-  <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="1rem">
-    <fa-icon class="mat-icon-20 color-primary color-primary" icon="stream"></fa-icon>
-    <div fxLayout="column">
-      <mat-slide-toggle labelPosition="before" (change)="togglePanSideMenu()" [(ngModel)]="canPanSideMenu">
-        {{'BEHAVIOR.PAN_SIDEMENU' | translate}}
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
+      <fa-icon class="mat-icon-22 color-primary" [icon]="themeControl.icon"></fa-icon>
+      <mat-slide-toggle labelPosition="before" (change)="toggleTheme()" [(ngModel)]="themeIsDark">
+        {{'THEMING.DARK_MODE' | translate}}
       </mat-slide-toggle>
-      <mat-hint class="mat-hint txt-0 mt-h">{{'BEHAVIOR.PAN_SIDEMENU_HINT' | translate}}</mat-hint>
+    </div>
+
+    <mat-divider class="mt-2 mb-1"></mat-divider>
+
+    <!-- Behavior -->
+    <h3 class="mat-h2 mat-hint">{{'BEHAVIOR.TITLE' | translate}}</h3>
+
+    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="1rem">
+      <fa-icon class="mat-icon-20 color-primary color-primary" icon="stream"></fa-icon>
+      <div fxLayout="column">
+        <mat-slide-toggle labelPosition="before" (change)="togglePanSideMenu()" [(ngModel)]="canPanSideMenu">
+          {{'BEHAVIOR.PAN_SIDEMENU' | translate}}
+        </mat-slide-toggle>
+        <mat-hint class="mat-hint txt-0 mt-h">{{'BEHAVIOR.PAN_SIDEMENU_HINT' | translate}}</mat-hint>
+      </div>
     </div>
   </div>
 </section>
