--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -1,7 +1,7 @@
 <section class="container container-nopadd">
-  <header class="profile-header padding-content pb-h mat-card mat-elevation-z0">
+  <header class="profile-header shadow-bottom padding-content pb-h mat-card mat-elevation-z0">
 
-    <div class="mt-h" fxLayout="row" fxLayoutGap="2rem" fxLayoutGap.xs="1rem">
+    <div class="container-max sm mt-h" fxLayout="row" fxLayoutGap="2rem" fxLayoutGap.xs="1rem">
       <div fxLayout="column" fxLayoutAlign="start center">
 
         <!-- Avatar -->
@@ -102,30 +102,32 @@
   </header>
 
   <!-- Tabs -->
-  <mat-tab-group mat-stretch-tabs color="primary">
+  <div class="container-max sm profile-tabs">
+    <mat-tab-group mat-stretch-tabs color="primary">
 
-    <!-- Days -->
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <fa-icon class="mat-icon-20" icon="calendar-day"></fa-icon>
-      </ng-template>
-      <div class="padding-content">
-        <ng-container *ngFor="let day of dayList">
-          <a13-day-card [(day)]="day"></a13-day-card>
-        </ng-container>
-        <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="student?.archived" (click)="createDay()">
-        </a13-floating-button>
-      </div>
-    </mat-tab>
+      <!-- Days -->
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <fa-icon class="mat-icon-20" icon="calendar-day"></fa-icon>
+        </ng-template>
+        <div class="padding-content">
+          <ng-container *ngFor="let day of dayList">
+            <a13-day-card [(day)]="day"></a13-day-card>
+          </ng-container>
+          <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="student?.archived" (click)="createDay()">
+          </a13-floating-button>
+        </div>
+      </mat-tab>
 
-    <!-- Marks -->
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <fa-icon class="mat-icon-20" icon="poll"></fa-icon>
-      </ng-template>
-      <div class="padding-content">
-        <p>{{'MARKS' | translate}}</p>
-      </div>
-    </mat-tab>
-  </mat-tab-group>
+      <!-- Marks -->
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <fa-icon class="mat-icon-20" icon="poll"></fa-icon>
+        </ng-template>
+        <div class="padding-content">
+          <p>{{'MARKS' | translate}}</p>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </section>
