--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
@@ -1,7 +1,12 @@
 .profile-header {
+  padding-bottom: 48px !important;
 
   .avatar {
     max-width: 64px;
     max-height: 64px;
   }
+}
+
+.profile-tabs {
+  margin-top: -48px;
 }
