--- a/src/app/classroom/components/classroom-delete-dialog/classroom-delete-dialog.component.html
+++ b/src/app/classroom/components/classroom-delete-dialog/classroom-delete-dialog.component.html
@@ -2,10 +2,13 @@
 <h2 mat-dialog-title>{{'CLASSROOM_DELETE' | translate}}</h2>
 
 <!-- Content -->
-<p class="mat-hint" mat-dialog-content>{{'MSG.CLASSROOM_DELETE' | translate}}</p>
+<p class="mat-hint" mat-dialog-content>
+  <b>{{'MSG.CLASSROOM_DELETE' | translate}}</b>
+  {{'MSG.CLASSROOM_DELETE_2' | translate}}.
+</p>
 
 <!-- Action -->
-<div class="mt-2" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
+<div class="mt-1" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
   <button mat-button (click)="onNoClick()">{{'CANCEL' | translate}}</button>
   <button mat-button color="warn" cdkFocusInitial (click)="ok()">{{'DELETE' | translate}}</button>
 </div>
