--- a/src/app/classroom/components/day-delete-dialog/day-delete-dialog.component.html
+++ b/src/app/classroom/components/day-delete-dialog/day-delete-dialog.component.html
@@ -2,10 +2,10 @@
 <h2 mat-dialog-title>{{'DAY.DELETE' | translate}}</h2>
 
 <!-- Content -->
-<p class="mat-hint" mat-dialog-content>{{'MSG.DAY_DELETE' | translate}}</p>
+<p class="mat-hint" mat-dialog-content><b>{{'MSG.DAY_DELETE' | translate}}</b></p>
 
 <!-- Action -->
-<div class="mt-2" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
+<div class="mt-1" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
   <button mat-button (click)="onNoClick()">{{'CANCEL' | translate}}</button>
   <button mat-button color="warn" cdkFocusInitial (click)="ok()">{{'DELETE' | translate}}</button>
 </div>
