--- a/src/app/classroom/components/student-archive-dialog/student-archive-dialog.component.html
+++ b/src/app/classroom/components/student-archive-dialog/student-archive-dialog.component.html
@@ -4,13 +4,11 @@
 <!-- Content -->
 <p class="mat-hint mb-h" mat-dialog-content>
 	<b>{{textConfig.msg | translate}}</b>
-</p>
-<p *ngIf="textConfig.msg2" class="mat-hint txt-justify" mat-dialog-content>
-	{{textConfig.msg2 | translate}}
+	{{textConfig.msg2 | translate}}.
 </p>
 
 <!-- Action -->
-<div class="mt-2" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
+<div class="mt-1" mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
 	<button mat-button (click)="onNoClick()">{{'CANCEL' | translate}}</button>
 	<button mat-button color="warn" cdkFocusInitial (click)="ok()">{{textConfig.okButton | translate}}</button>
 </div>
