bugfix remove class overflow-scroll-content

--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -1,5 +1,5 @@
 <section class="container container-nopadd">
-	<div class="profile-container overflow-scroll-content">
+	<div class="profile-container">
 		<header class="profile-header shadow-bottom p-1 mat-card mat-elevation-z0">
 			<div class="container-max sm" fxLayout="row" fxLayoutAlign="start center" *ngIf="day?.student">
 
