--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -246,11 +246,11 @@ mat-form-field {
 }
 
 // Arhived student
-.transparent,
+.translucide,
 .archived-student {
-  opacity: .4;
+  opacity: .5;
+}
 
-  &:hover {
-    opacity: 1;
-  }
+.archived-student:hover {
+  opacity: 1;
 }
