bugfix: pickup avatar

--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -18,7 +18,7 @@
       fxLayoutAlign="start center">
 
       <!-- Avatar -->
-      <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="student.personal.avatar"
+      <a13-pickup-image ngClass.xs="full-avatar mb-1 pb-h" class="avatar-selected" [(image)]="studentAvatar"
         [imageList]="avatars" fxFlex="nogrow">
       </a13-pickup-image>
 
