--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,4 @@
 @import "scss/typography";
 @import "scss/components";
 @import "scss/main";
-@import "~css-utilities/dist/style.min.css";
+@import "~@alejdev/css-utilities/dist/style.min.css";
