--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -1,4 +1,4 @@
-<section class="container container-padd">
+<section class="container container-padd" a13Scrollable (scrollPosition)="scrollHandler($event)">
   <div class="container-max sm">
 
     <!-- Days -->
@@ -7,7 +7,7 @@
     </ng-container>
 
     <!-- Empty list -->
-    <h3 *ngIf="!dayList.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
+    <h3 *ngIf="!dayList?.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
 
     <!-- Floating button -->
     <a13-floating-button text="DAY.ADD" icon="edit" (click)="createDay()"></a13-floating-button>
